falta pasar un tester de gotti
no se qué shit es el problema, se me borra un bloque antes de lo esperado :shit: